@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.97 2005/03/22 15:45:35 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.98 2005/03/22 16:44:04 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -70,6 +70,10 @@ PH/11 Installed exipick version 20050225.0 from John Jetmore.
 
 PH/12 If the last host in a fallback_hosts list was multihomed, only the first
       of its addresses was ever tried. (Bugzilla bug #2.)
+
+PH/13 If "headers_add" in a transport didn't end in a newline, Exim printed
+      the result incorrectly in the debug output. (It correctly added a newline
+      to what was transported.)
 
 
 A note about Exim versions 4.44 and 4.50
